--- a/Assignments/EmmaKaufman_A06_Lab_Crafting_Reports.Rmd
+++ b/Assignments/EmmaKaufman_A06_Lab_Crafting_Reports.Rmd
@@ -1,8 +1,11 @@
 ---
 title: 'A06 - Crafting Reports'
-author: "Student Name" 
+author: "Emma Kaufman" 
 date: "Fall 2023"
 output: pdf_document
+editor_options: 
+  chunk_output_type: console
+toc: true
 ---
 
 ## Objectives:
@@ -27,6 +30,11 @@ Using markdown, create a table beneath the `Table: EPA Air Quality` line below t
 
 Table: EPA Air Quality
 
+| Item|Value |
+-------------: | :-------------
+| Source|EPA Air Quality System (AQS) |
+| Date|2018-2019 |
+| Filename|EPAair_O3_PM25_NC1819_Processed.csv |
 
 ---
 
@@ -34,13 +42,13 @@ Table: EPA Air Quality
 
 Set the following R code chunk so that it runs when knit, but no messages, errors, or any output is shown. The code itself, however, should be displayed.
 
-```{r project.setup}
+```{r project.setup, echo=TRUE, message=FALSE, warning=FALSE}
 #Import libraries
 library(tidyverse);library(lubridate);library(here);library(knitr)
 
 #Import EPA data (from the processed_KEY folder) & fix dates
 epa_data <- read.csv(
-  here("data","processed_KEY","EPAair_O3_PM25_NC1819_Processed.csv"),
+  here("Data/Processed_KEY/EPAair_O3_PM25_NC1819_Processed.csv"),
   stringsAsFactors = TRUE) %>% 
   mutate(Date = ymd(Date))
 ```
@@ -59,8 +67,8 @@ Customize the chunk options such that the code is run but is not displayed in th
 >
 > -   If your output table spans across two pages, try inserting a page break in the markdown just before your code chunk.
 
-
-```{r data.summary}
+------
+```{r data.summary, echo=FALSE, message=FALSE, warning=FALSE}
 #Compute mean PM2.5 concentration for each county, sorted by value
 summary_PM25 <- epa_data %>% 
   drop_na(PM2.5) %>% 
@@ -77,7 +85,12 @@ summary_Ozone <- epa_data %>%
   arrange(mean_Ozone)
 
 #Use the `kable` function to produce the 2 tables in markdown format
-
+knitr::kable(summary_PM25,
+             caption = "Mean Particulates (2.5mm)",
+             col.names = c("County", "$\\mu g/m^3$"))
+knitr::kable(summary_Ozone,
+             caption = "Mean Ozone",
+             col.names = c("County", "$\\mu g/m^3$"))
 ```
 
 ---
@@ -86,6 +99,33 @@ summary_Ozone <- epa_data %>%
 
 Create two separate code chunks that create boxplots of the distribution of Ozone levels by month using, one for only records collected in 2018 and one for records in 2019. Customize the chunk options such that the final figures are displayed but not the code used to generate the figures. In addition, align the plots on the left side of the page and set the figure heights so both plots fit on the same page with minimal space remaining. Lastly, add a `fig.cap` chunk option to add a caption (title) to your plot that will display underneath the figure.
 
+```{r Ozone by month 2018, echo=FALSE, fig.cap="Monthly Ozone, 2018", fig.height=4, fig.width=7, message=FALSE, warning=FALSE, fig.align='left'}
+Ozone2018 <-
+  ggplot(filter(epa_data, Year == 2018), 
+         aes(
+           x = factor(Month, levels=1:12, labels = month.abb), 
+           y = Ozone)) +
+  geom_boxplot() +
+  ggtitle("Ozone levels by Month in 2018") +
+  #scale_x_discrete(name= "month", drop = FALSE) +
+  labs(x = "Month", y = expression(paste("Concentration(", mu, "g/", m^3, ")")))
+  
+print(Ozone2018)
+```
+
+```{r Ozone by month 2019, echo=FALSE, fig.cap="Monthly Ozone, 2019", fig.height=4, fig.width=7, message=FALSE, warning=FALSE, fig.align='left'}
+Ozone2019 <-
+  ggplot(filter(epa_data, Year == 2019), 
+         aes(
+           x = factor(Month, levels=1:12, labels = month.abb), 
+           y = Ozone)) +
+  geom_boxplot() +
+  ggtitle("Ozone levels by Month in 2019") +
+  #scale_x_discrete(name= "month", drop = FALSE) +
+  labs(x = "Month", y = expression(paste("Concentration(", mu, "g/", m^3, ")")))
+  
+print(Ozone2019)
+```
 
 
 ---
@@ -95,4 +135,5 @@ Create two separate code chunks that create boxplots of the distribution of Ozon
 Add a table of contents to your document and knit to a PDF. Submit your PDF to Sakai, but also be sure to commit and push your Rmd file used to create this knit document to GitHub. In the section below, add a link to your GitHub repository. 
 
 ## Git Repository
+[My Repository](https://github.com/erkaufman/EDE_Fall2023)
 
