--- a/Lessons/07Lab_GLMs.Rmd
+++ b/Lessons/07Lab_GLMs.Rmd
@@ -48,7 +48,29 @@ Create three plots, each with appropriately formatted axes and legends. Choose a
 
 ```{r}
 #Exercise 1:
+Ozone.plot <- ggplot(EPAair, 
+                     aes(x= Ozone,
+                         fill = as.factor(Year))) +
+  geom_density(alpha = 0.5) +
+  scale_fill_manual(values = c("darkgreen", "purple"))
+  mytheme +
+  labs( x= "Ozone AQI value",
+        y = "Density")
+  #geom_vline(color = "#238b45", lty = 2, size = 0.9) +
+print(Ozone.plot)
 
+#Exercise 2: 
+Ozone.box <- ggplot(EPAair, aes(x= as.factor(Year),
+                    y = Ozone))+
+  geom_boxplot()+
+  stat_summary(geom = "text",
+               fun = mean,
+               vjust = -1,
+               size= 4,
+               label = c("b","a"))+
+  labs(y = "Ozone AQI value", x = "Year")+
+ylim(0,150)
+print(Ozone.box)
 
 ```
 
@@ -61,10 +83,19 @@ For the NTL-LTER dataset, can we predict PM2.5 from Ozone?
 ```{r}
 
 #Exercise 2: Run a linear regression PM2.5 by Ozone. Find the p-value and R-squared value. 
-
+Ozone.regression <- lm(
+  data = EPAair,
+  PM2.5 ~ Ozone)
+summary(Ozone.regression)
 
 
 #Exercise 3: Build a scatterplot. Add a line and standard error for the linear regression. Add the regression equation to the plot
+# Plot the regression
+PMbyOzone <- 
+  ggplot(EPAair, aes(x = Ozone, y = PM2.5)) +
+  geom_point() +
+   geom_smooth(method = "lm", color = 'green')
+print(PMbyOzone) 
 
 
 
@@ -78,16 +109,29 @@ What other variables can we add to improve model?
 ```{r}
 
 #Exercise 4: Build correlation plots and identify more possible explanatory variables to add to the regression.
+library(corrplot)
+library(dplyr)
+EPAair.subset <- #selecting only columns from mean lat to ozone, smaller dataset
+  EPAair %>% 
+  select(mean_Lat:Ozone) %>% 
+  na.omit()
 
-
+EPAairCorr <- cor(EPAair.subset)
+corrplot(EPAairCorr, method = "ellipse")
+corrplot.mixed(EPAairCorr, upper = "ellipse")
 
 
 #Exercise 5: Choose a model by AIC in a Stepwise Algorithm. Do the results from AIC match the variables you selected on Exercise 4?
 
+OzonebyALL.regression <- lm(data= EPAair.subset, PM2.5 ~ Ozone + Year + Month + mean_Lng + mean_Lat)
 
+step(OzonebyALL.regression)
 
 
 #Exercise 6: Run another regression using the variables selected on Exercise 6. Compare r-squared value with the one from Exercise 2. 
+
+OzoneBest.regression <- lm(data = EPAair.subset, PM2.5 ~ Ozone + Month +mean_Lng + mean_Lat)
+summary(OzoneBest.regression)
 
 ```
 
