--- a/Assignments/EmmaKaufman_A08_TimeSeries.Rmd
+++ b/Assignments/EmmaKaufman_A08_TimeSeries.Rmd
@@ -137,7 +137,7 @@ plot(PPM)
 
 ```
 
->Answer: It shows that ozone concentration has slightly decreased over time, it also shows yearly flucutations in ozone concentration. The slight decrease over time is a monotonic decreasing trend. 
+>Answer: It shows that ozone concentration has slightly decreased over time, it also shows yearly flucutations in ozone concentration. The slight decrease over time is evidence of a monotonic decreasing trend. 
 
 
 ## Time Series Analysis
@@ -153,7 +153,7 @@ Ozone_clean <-
   mutate( DailyMax8.clean = zoo::na.approx(DailyMax8) )
 ```
 
-> Answer: We didn't use a piecewise constant because if values are increasing or decreasing daily we want our estimate to represent that trend . If we just did nearest neighbors then our estimate wouldn't be as accurate, so we are using the linear interpolation because it takes the average of the known values before and after our missing value. Additionally there are only short periods of missing data, so linear interpolation is appropriate. We didn't use a spline interpolation because these data are best represent by a linear approximation rather than a quadratic one. 
+> Answer: We didn't use a piecewise constant because if values are increasing or decreasing daily we want our estimate to represent that trend. If we just did nearest neighbors then our estimate wouldn't be as accurate, so we are using the linear interpolation because it takes the average of the known values before and after our missing value. Additionally there are only short periods of missing data, so linear interpolation is appropriate. We didn't use a spline interpolation because these data are best represent by a linear approximation rather than a quadratic one. 
 
 
 9. Create a new data frame called `GaringerOzone.monthly` that contains aggregated data: mean ozone concentrations for each month. In your pipe, you will need to first add columns for year and month to form the groupings. In a separate line of code, create a new Date column with each month-year combination being set as the first day of the month (this is for graphing purposes only)
@@ -170,7 +170,6 @@ GaringerOzone.monthly <- Ozone_clean %>%
 #making new Date column
 GaringerOzone.monthly <- GaringerOzone.monthly %>%
   mutate(Date = make_date(year, month, 1))
-
 
 ```
 
@@ -221,14 +220,12 @@ Ozone_trend2
 summary(Ozone_trend2)
 ```
 
-> Answer: The seasonal Mann Kendall trend analysis is appropriate because our data shows strong seasonality.This is the only test that is appropriate for seasonal data, (unless we were to remove the seasonality from our data, in that case we could then try to run another test).  Additioanlly it is not linear, but still has a general monotonic trend (seen in the plot from question 7). 
-Why is the seasonal Mann Kendall most appropriate? monotonic trend analysis, seasonality, non-parametric?
+> Answer: The seasonal Mann Kendall trend analysis is appropriate because our data shows strong seasonality.This is the only test that is appropriate for seasonal data (unless we were to remove the seasonality from our data, in that case we could then try to run another test).  Additionally while our data is not linear, we still sees a general monotonic trend (seen in the linear regression on the plot from question 7).
 
 13. Create a plot depicting mean monthly ozone concentrations over time, with both a geom_point and a geom_line layer. Edit your axis labels accordingly.
 
 ```{r fig.height=4, fig.width=6}
 # 13
-
 #Visualization
 Ozone_plot <-
 ggplot(GaringerOzone.monthly, aes(x = Date, y = mean_ozone)) +
@@ -245,7 +242,7 @@ print(Ozone_plot)
 
 14. To accompany your graph, summarize your results in context of the research question. Include output from the statistical test in parentheses at the end of your sentence. Feel free to use multiple sentences in your interpretation.
 
-> Answer: The null hypothesis of the seasonal mann kendall is that the data are stationary. We get a p-value that is just below 0.05 (p= 0.04965), which means we can reject the null hypothesis and the trend we see in our data is statistically significant. When looking at each indivdual season we see that some individual seasons don't show the overall decreasing trend, but that the majority do have a large negative S value. We see this on our plot with the negative slope for the linear regression line in blue indicating a decrease in monthly mean ozone concentration over time. 
+> Answer: The null hypothesis of the seasonal mann kendall is that the data are stationary (have not changed over the 2010s at this station). We get a p-value that is just below 0.05 (p= 0.04965), which means we can reject the null hypothesis and the trend we see in our data is statistically significant. So we can say that ozone concentrations have changed over the 2010s at this station (p=0.04965_. When looking at each indivdual season we see that some individual seasons don't show an overall decreasing trend, but that the majority do have a large negative S value (indicating a decreasing trend). We see this negative trend on our plot with the negative slope for the linear regression line in blue, which indicates a decrease in monthly mean ozone concentration over time. The significance of this trend is confirmed by our p-value of 0.0497.  
 
 15. Subtract the seasonal component from the `GaringerOzone.monthly.ts`. Hint: Look at how we extracted the series components for the EnoDischarge on the lesson Rmd file.
 
@@ -259,7 +256,7 @@ Garinger.late_Components <- as.data.frame(Monthly_Decomposed$time.series[,2:3]) 
 #16
 
 Ozone_nonseasonal <- Kendall::SeasonalMannKendall(Garinger.late_Components) #how to interpret? 
-
+NS2 <- trend::smk.test(Garinger.late_Components)
 
 ```
 
